# sendspin-bt-bridge

./: .dockerignore  .gitattributes  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HISTORY.md  HISTORY.ru.md  LICENSE  README.md  README.ru.md  ROADMAP.bluez-agent.md  ROADMAP.md  ROADMAP.md.bak  ROADMAP.ru.md  ROADMAP_V3.md  SECURITY.md  TODO.md  VERSION  bluetooth_manager.py  bridge_orchestrator.py  bt_audio.py  bt_dbus.py  bt_monitor.py  bt_types.py  community_engagement.md  config.py  config.schema.json  config_auth.py  config_migration.py  config_network.py  dev-requirements.txt  docker-compose.yml  entrypoint.sh  hacs.json  info.md  (+11 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bluetooth_audio.yml  bug_report.yml  bug_report_auto.yml  config.yml  feature_request.yml
.github/workflows/: _lint.yml  _test.yml  ci.yml  docker-publish-armv7.yml  docker-publish.yml  docker-smoke.yml  docs.yml  github-release.yml  lint.yml  pytest.yml  release.yml  sync-ha-addon-variants.yml  traffic.yml
.superdesign/: design-system.md
.superdesign/init/: components.md  extractable-components.md  layouts.md  pages.md  routes.md  theme.md
custom_components/sendspin_bridge/: __init__.py  _ma_compat.py  _specs.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  number.py  select.py  sensor.py  switch.py  update.py
demo/: __init__.py  bt_manager.py  fixtures.py  simulator.py
deployment/: render.yaml
deployment/lxc/: README.md  install.sh  migrate-to-src-layout.sh  proxmox-create.sh  pulse-system.pa  sendspin-client.service  upgrade.sh
deployment/proxmox/: vm-create.sh  vm-deploy.sh
deployment/raspberry-pi/: check.sh  install.sh
docs-site/: astro.config.mjs  package-lock.json  package.json
docs-site/public/: robots.txt
docs/plans/: 2026-05-11-entity-category-config-fix.md  2026-05-11-issue-269-avdtp-collision-fixes.md
docs/roadmap/: todo.md  v3.md
ha-addon/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  apparmor.txt  build.yaml  config.yaml  run.sh
ha-addon-beta/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  apparmor.txt  build.yaml  config.yaml
ha-addon-beta/translations/: en.yaml
ha-addon-rc/: CHANGELOG.md  DOCS.md  README.md  apparmor.txt  build.yaml  config.yaml
ha-addon-rc/translations/: en.yaml
ha-addon/translations/: en.yaml
landing/: index.html  robots.txt  sitemap.xml
landing/ru/: index.html
lxc/: README.md  install.sh  proxmox-create.sh  pulse-daemon.conf  pulse-system.pa  pulseaudio-system.service  sendspin-client.service  upgrade.sh
lxc/openwrt/: README.md  create.sh  dbus-pulseaudio.conf  sendspin-lxc.init
reddit/: POST_DRAFT.md
rnd/: ma-bluetooth-provider-analysis.md
routes/: _helpers.py  api.py  api_bt.py  api_config.py  api_ha.py  api_ma.py  api_status.py  api_transport.py  api_ws.py  auth.py  ma_auth.py  ma_groups.py  ma_playback.py  views.py
scripts/: check_container_runtime.py  check_locked_dev_tools.py  check_sendspin_compat.py  generate_ha_addon_variants.py  lint_changelog.py  merge_branch_changelog.py  migrate_imports.py  proxmox-vm-deploy.sh  release_notes.py  rpi-check.sh  rpi-install.sh  setup-discussions.sh  setup-labels.sh  sync_requirements.py  translate_ha_config.py  translate_landing.py
sendspin_bridge/bluetooth/: manager.py
services/: __init__.py  _helpers.py  adapter_names.py  adapter_recovery.py  async_job_state.py  audio_backend.py  avrcp_source_tracker.py  backend_orchestrator.py  bluetooth.py  bridge_daemon.py  bridge_runtime_state.py  bridge_state_model.py  bt_class_of_device.py  bt_commands.py  bt_rssi_mgmt.py  config_diff.py  config_validation.py  daemon_process.py  device_activation.py  device_health_state.py  device_registry.py  duplicate_device_check.py  event_hooks.py  event_store.py  github_issue_proxy.py  guidance_issue_registry.py  ha_addon.py  ha_command_dispatcher.py  ha_core_api.py  ha_entity_model.py  ha_integration_lifecycle.py  ha_mqtt_publisher.py  ha_state_projector.py  hci_avrcp_monitor.py  internal_events.py  ipc_protocol.py  lifecycle_state.py  log_analysis.py  ma_artwork.py  ma_client.py  (+28 more)
services/backends/: __init__.py  bluetooth_a2dp.py  mock_backend.py
src/sendspin_bridge/: __init__.py  __main__.py
static/: app.js  style.css
templates/: index.html  login.html  logout_method.html
tests/: conftest.py  test_adapter_device_class_migration.py  test_adapter_names.py  test_adapter_recovery.py  test_api_bt_adapters.py  test_api_bt_claim.py  test_api_bt_scan_filter.py  test_api_config_ha_integration.py  test_api_endpoints.py  test_api_events.py  test_api_ha.py  test_audio_backend.py  test_auth.py  test_auth_enforcement.py  test_auth_token_routes.py  test_auth_tokens.py  test_avrcp_source_tracker.py  test_backend_factory.py  test_backend_orchestrator.py  test_backend_state_sync.py  test_bluetooth_svc.py  test_bridge_daemon_features.py  test_bridge_mdns.py  test_bridge_orchestrator.py  test_bt_a2dp_backend.py  test_bt_class_of_device.py  test_bt_commands.py  test_bt_info_adapter_awareness.py  test_bt_manager.py  test_bt_monitor.py  test_bt_paired_multi_adapter.py  test_bt_paired_parser.py  test_bt_rssi_mgmt.py  test_bt_rssi_refresh.py  test_bt_scan_rssi.py  test_bugreport_environment.py  test_client_lookup.py  test_config.py  test_config_api_v2.py  test_config_diff.py  (+116 more)
tests/integration/: test_breadcrumb_lifecycle.py  test_container_runtime.py  test_generate_ha_addon_variants.py  test_ha_addon_schema_sync.py  test_ha_custom_component_specs_sync.py  test_lint_changelog.py  test_packaging.py  test_translate_ha_config.py
tests/unit/: test_hacs_metadata.py
traffic/: dashboard.html  summary.json
traffic/ci/: 2026-03-31.json  2026-04-01.json  2026-04-02.json  2026-04-03.json  2026-04-04.json  2026-04-05.json  2026-04-06.json  2026-04-07.json  2026-04-08.json  2026-04-09.json  2026-04-10.json  2026-04-11.json  (+99 more)
ui/: index.html  package-lock.json  package.json  vite.config.ts
(+1374 files in other folders)
