[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "sendspin-bt-bridge"
description = "Bridge Music Assistant Sendspin protocol to Bluetooth speakers"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "sendspin==7.0.0",
    "aiosendspin[server]==5.1.1",
    "flask==3.1.3",
    "waitress==3.0.2",
    "dbus-python==1.4.0",
    "dbus-fast==4.0.4",
    "pulsectl-asyncio==1.2.2",
    "music-assistant-client==1.3.5",
    "websockets==16.0",
    "zeroconf==0.148.0",
    "PyJWT>=2.8.0",
    "cryptography>=46.0.7",
    # services.adapter_recovery — optional BT adapter recovery ladder (Linux-only).
    "bluetooth-auto-recovery==1.5.3",
    # services.bt_rssi_mgmt — live RSSI via BlueZ mgmt socket (Linux-only).
    "btsocket==0.3.0",
    # services.ha_mqtt_publisher — async MQTT discovery for HA.
    "aiomqtt>=2.0",
    # Transitive minimum-version pins for security fixes.
    # See requirements.txt for per-CVE rationale; bump alongside pip-audit findings.
    "aiohttp>=3.13.4",
    "pillow>=12.2.0",
    "pygments>=2.20.0",
    "requests>=2.33.0",
]

[tool.uv]
# Pin uv version range so all contributors / CI / Dockerfile use a compatible
# resolver and lockfile schema. Bump deliberately alongside the Dockerfile pin.
required-version = ">=0.9.27,<0.10"

# Cap PyAV below 17.x so the armv7 release build can install from piwheels
# under `--only-binary :all:`. piwheels publishes abi3 wheels for armv7 up to
# av 16.1.0 and has not built av 17.x; PyPI ships no linux_armv7l wheels for
# av at all. Lifting this cap requires a piwheels build of the desired av
# version OR dropping `--only-binary :all:` on armv7 (slow source compile).
constraint-dependencies = [
    "av<17",
]

[tool.hatch.version]
path = "VERSION"
pattern = "^(?P<version>.+)$"

[tool.hatch.build.targets.wheel]
# B5: routes/services/templates/static moved into src/sendspin_bridge/.
# Only the top-level src package remains. B6 will move sendspin_client.py
# into the package as well; until then it ships as a sibling module.
packages = ["src/sendspin_bridge"]
# Hatchling auto-includes non-.py files inside the package tree (Flask
# templates/, static/, config/schema.json), so no force-include is needed.

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-xdist>=3.6.0,<4.0",
    # CI's _test.yml runs pytest with --cov; keep coverage opt-in via the
    # dev extra so contributors can `uv run pytest --cov=...` locally too.
    "pytest-cov>=5.0,<7.0",
    "ruff==0.15.12",
    "mypy>=1.20.2,<2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "G",      # flake8-logging-format (lazy % logging)
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "UP017",  # datetime.UTC alias (we use timezone.utc for Python 3.9 compat)
    "SIM102", # collapsible if (reduces readability in complex conditionals)
    "SIM103", # return condition directly (reduces readability)
    "SIM105", # contextlib.suppress (try/except/pass is clearer for this project)
    "SIM108", # use ternary operator (reduces readability)
    "RUF002", # ambiguous unicode character (intentional × in docstrings)
    "RUF012", # mutable class attributes (too noisy for this project)
    "RUF006", # dangling asyncio task (intentional fire-and-forget)
    "RUF046", # unnecessary int cast (explicit int() on round() is intentional)
    "UP007",  # use X | Y for unions (keep Optional for clarity)
    "UP042",  # StrEnum rewrite conflicts with compatibility paths and current enum usage
    "B904",   # raise from in except (too disruptive to retrofit)
]

[tool.ruff.lint.isort]
known-first-party = ["sendspin_bridge"]

[tool.ruff.lint.per-file-ignores]
"scripts/translate_landing.py" = ["RUF001"]  # Cyrillic strings are intentional

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 60
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    # Parallel execution (pytest-xdist). Cuts the local full-suite run
    # from 191s → 17s on a 4-core box. Override with `pytest -n0` to
    # debug a single test or trace state pollution.
    "-n=auto",
    # `loadfile` distribution: every test in a given file runs in the
    # same worker. Required because some test files share monkey-patched
    # module state across their tests (e.g. demo/__init__.py module-level
    # patches), and the default `loadscope` was breaking those by
    # splitting the file across workers. With loadfile the files
    # parallelize across workers but each file is internally serial.
    "--dist=loadfile",
    # NOTE: coverage (`--cov=src/sendspin_bridge ...`) is intentionally
    # NOT in addopts — it adds ~30% overhead and isn't useful locally.
    # CI's _test.yml passes the cov flags explicitly when it wants the
    # report.
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]

[tool.mypy]
python_version = "3.12"
follow_imports = "silent"
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = false
show_error_codes = true
exclude = [
    "sendspin-cli/",
    "scripts/",
    # HA-specific code; ships separately via HACS, mypy doesn't have HA stubs.
    "custom_components/",
]
